@@ -1,5 +1,13 @@
 2018-04-20  Chris Dumez  <cdumez@apple.com>
 
+        Unreviewed attempt to fix Windows build after r230875.
+
+        * platform/network/cf/CookieJarCFNet.cpp:
+        (WebCore::cookieRequestHeaderFieldValue):
+        * platform/network/curl/CookieJarCurlDatabase.cpp:
+
+2018-04-20  Chris Dumez  <cdumez@apple.com>
+
         REGRESSION (r229828): web view doesn’t update or respond to resizing until client calls policy decision handler
         https://bugs.webkit.org/show_bug.cgi?id=184210
         <rdar://problem/39072354>
